bk_ida/gccida/c0/simplify_gen_relational
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_gen_relational/src/simplify-rtx.c:693:31: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_gen_relational( rtx_code code, machine_mode mode, machine_mode cmp_mode, rtx op0, rtx op1) 
                              ^
                              enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_gen_relational/src/simplify-rtx.c:693:46: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_gen_relational( rtx_code code, machine_mode mode, machine_mode cmp_mode, rtx op0, rtx op1) 
                                             ^
                                             enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_gen_relational/src/simplify-rtx.c:693:65: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_gen_relational( rtx_code code, machine_mode mode, machine_mode cmp_mode, rtx op0, rtx op1) 
                                                                ^
                                                                enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_gen_relational/src/simplify-rtx.c:699:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code codea; // [rsp+24h] [rbp-Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_gen_relational/src/simplify-rtx.c:707:6: error: use of undeclared identifier 'QTextBlock'
if ( QTextBlock::operator<( op0a, op1a) ) 
     ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/simplify_gen_relational/src/obj/simplify-rtx.o] Error 1
